syntax = "proto3";

import "CommonReq.proto";

message ReplyMeReqIdl {
    message DataReq {
        string pn = 1;
        CommonReq common = 3;
    }
    DataReq data = 1;
}